# MicrofluidicNucleationSoftware

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
apps/: CMakeLists.txt  MpembaGUI.cpp  MpembaPostEval.cpp  app.cpp
examples/: analysis_config.cf  temp_curve_example.tc
include/MicroCalibrator/: MicroCalibrator.h
include/MicrofluidicNucleation/: AnalysisConfig.h  CSV.h  CsvWriter.h  Detection.h  Droplet.h  DropletResult.h  Experiment.h  Frame.h  MicrofluidicNucleation.h  NucleationCalculator.h  RawDroplet.h  Results.h  ResultsWriter.h  TemperatureReader.h  ThermalSimulation.h  Vector2D.h  VideoAnalyzer.h  YoloV5.h
include/MicrofluidicNucleationGui/: MainWindow.h  MicrofluidicNucleationGui.h
scripts/: changeGamma.sh  createEmptyTemperatureCurves.sh  detectMpembaEffect.py  mirrorVideos.sh  nucleationStat.py  nucleationWilcoxon.py  plotNucleationCurve.py  plotNucleationCurves.py  plotNucleationScatter.py  plotNucleationStat.py  plotStatisticalConvergence.py  plotTempRampCurve.py  requirements.txt
scripts/analysis/: __init__.py  data_loader.py  nucleation_analysis.py
scripts/config/: __init__.py  constants.py  paths.py
scripts/plotting/: __init__.py  plotting_utils.py
src/: AnalysisConfig.cpp  CMakeLists.txt  Detection.cpp  Droplet.cpp  DropletResult.cpp  Experiment.cpp  Frame.cpp  MainWindow.cpp  MicroCalibrator.cpp  MicrofluidicNucleationGui.cpp  NucleationCalculator.cpp  RawDroplet.cpp  ResultsWriter.cpp  TemperatureReadder.cpp  TemperatureReader.cpp  ThermalSimulation.cpp  Vector2D.cpp  VideoAnalyzer.cpp  YoloV5.cpp
